--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -8,74 +8,84 @@
                     <div class="extra-space-m"></div>
 
 
+                    <div class="popup_box"  style="padding-top: 20; padding-left: 10; padding-right: 10;">
 
-                    <div class="popup_box" style="padding-top: 20; padding-left: 10; padding-right: 10;">
-                        <h3 style="text-align: center;">합병 및 채권자 이의제출 등 공고</h3>
+                        <h3 style="text-align: center;">합병보고의 공고</h3>
                         <div class="extra-space-m"></div>
                         <div class="popup_box_inner">
-                            <div class="popup_text">
-                                주식회사 갤럭시코퍼레이션(110111-7198694)(“갑”)과 주식회사 주피터엔터테인먼트 (110111-7207289)(“을”) 및 주식회사 페르소나유니버스(110111-7624350)(”병”)는 2022년 6월 28일 개최한 각각의 이사회에서 갑은 을 및 병을 합병하여 그 권리와 의무를 승계하고, 을 및 병은 해산하기로 결의한 바, 이 합병에 이의가 있는 채권자는 본 공고 게재일 익일부터 1개월 이내에 이의를 제출하여 주시기 바랍니다. 또한 을 및 병의 주식을 소유하고 있는 분은 공고 게재일 익일부터 1개월 이내에 주권을 각각 을 및 병에게 제 출하시기 바랍니다.<br />
-                                <br />
-                                본 합병은 무증자합병이며, 합병비율은 다음과 같습니다.<br />
-                                <br />
-                                &nbsp; &nbsp; &nbsp; &nbsp; ⚫ 주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0<br />
-                                &nbsp; &nbsp; &nbsp; &nbsp; ⚫ 주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0<br />
-                                <br /><br /><br /><br /><br />
-                            </div>
-                            <div class="popup_text" style="text-align: center;">
-                                2022년 6월 29일<br /><br /><br /><br />
-                            </div>
-                            
-                            <div class="popup_text">
-                            <table style="width:72%; border:none;" align="right">
-                                <tr>
-                                    <td colspan="2" width="84%">“갑” 주식회사 갤럭시코퍼레이션</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">주&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;소</td>
-                                    <td style="text-align: left;">: 서울특별시 영등포구 국제금융로 10, 12층 1218호</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">대 표 이 사</td>
-                                    <td style="text-align: left;">: 최&nbsp; &nbsp; &nbsp;  용&nbsp; &nbsp; &nbsp;  호</td>
-                                </tr>
+                            <div class="popup_text">당사는 주식회사 주피터엔터테인먼트 및 주식회사 페르소나유니버스를 각각 흡수 합병 함에 있어 소정의 절차를 마쳤기에 상법 526조 제 1항 및 제 3항에 의거, 합병보고주주총회에 갈음하여 다음과 같이 공고합니다.</div>
 
-                                <tr>
-                                    <td colspan="2">“을” 주식회사 주피터엔터테인먼트</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">주&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;소</td>
-                                    <td style="text-align: left;">: 서울특별시 영등포구 국제금융로2길 37, 2102호</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">대 표 이 사</td>
-                                    <td style="text-align: left;">: 신&nbsp; &nbsp; &nbsp;  은&nbsp; &nbsp; &nbsp;  섭</td>
-                                </tr>
+                            <div class="popup_text" style="text-align: center; margin:40px;"> - 다음 – </div>
 
-                                <tr>
-                                    <td colspan="2">“병” 주식회사 페르소나유니버스</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">주&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;소</td>
-                                    <td style="text-align: left;">: 서울특별시 영등포구 국회대로 780, 1134호</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">대 표 이 사</td>
-                                    <td style="text-align: left;">: 최&nbsp; &nbsp; &nbsp;  용&nbsp; &nbsp; &nbsp;  호</td>
-                                </tr>
-                            </table>
+                            <div class="popup_text">1. 합병내용<br />
+                                &nbsp;&nbsp;가. 합병당사회사<br />
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 존속회사 : 주식회사 갤럭시코퍼레이션</li>
+                                </ul>
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 주피터엔터테인먼트</li>
+                                </ul>
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 페르소나유니버스</li>
+                                </ul>
+                                <br />
+                                &nbsp;&nbsp;나. 합병비율<br />
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0</li>
+                                </ul>
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0</li>
+                                </ul>
+                                <br />
+                                &nbsp;&nbsp;다. 증가주식수 및 자본금 : 해당사항 없음<br />
                             </div>
+
+                            <div class="popup_text">2. 합병진행 결과<br />
+                                
+                                <table style="text-align: left; margin: 5px;" align="center">
+                                    <tbody>
+                                      <tr>
+                                        <td style="width:fill">2022년 6월 10일 </td>
+                                        <td>:합병이사회 결의</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 6월 10일</td>
+                                        <td>:합병계약서 체결</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 6월 29일</td>
+                                        <td>:채권자 이의제출 공고 및 최고통지</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 7월 29일</td>
+                                        <td>:채권자 이의제출기간 만료</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 8월 2일</td>
+                                        <td>:합병기일</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 8월 3일</td>
+                                        <td style="width:fill">:이사회결의<br />
+                                          (합병보고주주총회를 홈페이지공고로 갈음하기로 결의) </td>
+                                      </tr>
+                                    </tbody>
+                                </table>
+
+                                <div style="text-align: center; margin:50px;">2022년 8월 3일</div>
+                                <div style="text-align: right; margin-top:15px;">서울특별시 영등포구 국제금융로 10, 12층 1218호</div>
+                                <div style="text-align: right; margin-top:15px;">주식회사 갤럭시코퍼레이션</div>
+                                <div style="text-align: right; margin-top:15px;">대표이사 최용호</div>
                             
-                        <div class="popup_text" style="text-align: center;">
-                            &nbsp;<br /><br /><br /><br />
+                            </div>
                         </div>
-                            
-                        </div>
-                        <div class="extra-space-m"></div>
                     </div>
 
 
 
+
+
+                    
 
                 </div>
             </div>
@@ -87,70 +97,82 @@
 
 
 
+
+
                     <div class="popup_box"  style="padding-top: 20; padding-left: 10; padding-right: 10;">
-                        <h3 style="text-align: center;">합병 및 채권자 이의제출 등 공고</h3>
+
+                        <h3 style="text-align: center;">합병보고의 공고</h3>
                         <div class="extra-space-m"></div>
                         <div class="popup_box_inner">
-                            <div class="popup_text">
-                                주식회사 갤럭시코퍼레이션(110111-7198694)(“갑”)과 주식회사 주피터엔터테인먼트 (110111-7207289)(“을”) 및 주식회사 페르소나유니버스(110111-7624350)(”병”)는 2022년 6월 28일 개최한 각각의 이사회에서 갑은 을 및 병을 합병하여 그 권리와 의무를 승계하고, 을 및 병은 해산하기로 결의한 바, 이 합병에 이의가 있는 채권자는 본 공고 게재일 익일부터 1개월 이내에 이의를 제출하여 주시기 바랍니다. 또한 을 및 병의 주식을 소유하고 있는 분은 공고 게재일 익일부터 1개월 이내에 주권을 각각 을 및 병에게 제 출하시기 바랍니다.<br />
-                                <br />
-                                본 합병은 무증자합병이며, 합병비율은 다음과 같습니다.<br />
-                                <br />
-                                &nbsp; &nbsp; &nbsp; &nbsp; ⚫ 주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0<br />
-                                &nbsp; &nbsp; &nbsp; &nbsp; ⚫ 주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0<br />
-                                <br /><br /><br /><br /><br />
-                            </div>
-                            <div class="popup_text" style="text-align: center;">
-                                2022년 6월 29일<br /><br /><br /><br />
-                            </div>
-                            
-                            <div class="popup_text">
-                                <table style="width:72%; border:none;" align="right">
-                                <tr>
-                                    <td colspan="2" width="84%">“갑” 주식회사 갤럭시코퍼레이션</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">&nbsp;주&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;소</td>
-                                    <td style="text-align: left;">: 서울특별시 영등포구 국제금융로 10, 12층 1218호</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">&nbsp;대 표 이 사</td>
-                                    <td style="text-align: left;">: 최&nbsp; &nbsp; &nbsp;  용&nbsp; &nbsp; &nbsp;  호</td>
-                                </tr>
+                            <div class="popup_text">당사는 주식회사 주피터엔터테인먼트 및 주식회사 페르소나유니버스를 각각 흡수 합병 함에 있어 소정의 절차를 마쳤기에 상법 526조 제 1항 및 제 3항에 의거, 합병보고주주총회에 갈음하여 다음과 같이 공고합니다.</div>
 
-                                <tr>
-                                    <td colspan="2">“을” 주식회사 주피터엔터테인먼트</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">&nbsp;주&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;소</td>
-                                    <td style="text-align: left;">: 서울특별시 영등포구 국제금융로2길 37, 2102호</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">&nbsp;대 표 이 사</td>
-                                    <td style="text-align: left;">: 신&nbsp; &nbsp; &nbsp;  은&nbsp; &nbsp; &nbsp;  섭</td>
-                                </tr>
+                            <div class="popup_text" style="text-align: center; margin:40px;"> - 다음 – </div>
 
-                                <tr>
-                                    <td colspan="2">“병” 주식회사 페르소나유니버스</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">&nbsp;주&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;소</td>
-                                    <td style="text-align: left;">: 서울특별시 영등포구 국회대로 780, 1134호</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;">&nbsp;대 표 이 사</td>
-                                    <td style="text-align: left;">: 최&nbsp; &nbsp; &nbsp;  용&nbsp; &nbsp; &nbsp;  호</td>
-                                </tr>
-                            </table>
+                            <div class="popup_text">1. 합병내용<br />
+                                &nbsp;&nbsp;가. 합병당사회사<br />
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 존속회사 : 주식회사 갤럭시코퍼레이션</li>
+                                </ul>
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 주피터엔터테인먼트</li>
+                                </ul>
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 페르소나유니버스</li>
+                                </ul>
+                                <br />
+                                &nbsp;&nbsp;나. 합병비율<br />
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0</li>
+                                </ul>
+                                <ul class="bulleted-list">
+                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0</li>
+                                </ul>
+                                <br />
+                                &nbsp;&nbsp;다. 증가주식수 및 자본금 : 해당사항 없음<br />
                             </div>
+
+                            <div class="popup_text">2. 합병진행 결과<br />
+                                
+                                <table style="text-align: left; margin: 5px;" align="center">
+                                    <tbody>
+                                      <tr>
+                                        <td style="width:fill">2022년 6월 10일 </td>
+                                        <td>:합병이사회 결의</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 6월 10일</td>
+                                        <td>:합병계약서 체결</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 6월 29일</td>
+                                        <td>:채권자 이의제출 공고 및 최고통지</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 7월 29일</td>
+                                        <td>:채권자 이의제출기간 만료</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 8월 2일</td>
+                                        <td>:합병기일</td>
+                                      </tr>
+                                      <tr>
+                                        <td>2022년 8월 3일</td>
+                                        <td style="width:fill">:이사회결의<br />
+                                          (합병보고주주총회를 홈페이지공고로 갈음하기로 결의) </td>
+                                      </tr>
+                                    </tbody>
+                                </table>
+
+                                <div style="text-align: center; margin:50px;">2022년 8월 3일</div>
+                                <div style="text-align: right; margin-top:15px;">서울특별시 영등포구 국제금융로 10, 12층 1218호</div>
+                                <div style="text-align: right; margin-top:15px;">주식회사 갤럭시코퍼레이션</div>
+                                <div style="text-align: right; margin-top:15px;">대표이사 최용호</div>
                             
-                        <div class="popup_text" style="text-align: center;">
-                            &nbsp;<br /><br /><br /><br />
+                            </div>
                         </div>
-                            
-                        </div>
-                        <div class="extra-space-m"></div>
                     </div>
+
+
 
 
 
