--- a/src/styles.css
+++ b/src/styles.css
@@ -1918,12 +1918,13 @@ body.boxed .body .navbar-inverse.navbar-transparent.navbar-shrink .navbar-brand 
   font-size: 30px;
 }
 
+/* pc Table  */
 .pc .popup_box>table,
 tr,
 td,
 th {
   border: 0.8px solid black;
-  text-align: center;
+  text-align: left;
   padding: 2px 10px;
 }
 
@@ -2016,12 +2017,13 @@ th {
   font-size: 30px;
 }
 
+/* mobile Table  */
 .mobile .popup_box>table,
 tr,
 td,
 th {
   border: 0.8px solid black;
-  text-align: center;
+  text-align: left;
   padding: 2px 10px;
 }
 
