--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -1,6 +1,6 @@
 <section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5">
     <div style="position: absolute;" #galaxy3dContainer></div>
-    <div style="position: relative; left: 0; right: 0;" class="container">
+    <div style="position: relative; left: 0; right: 0; width:fill;" class="container">
         <div class="popup_container" #popupContainer>
 
 
@@ -13,78 +13,47 @@
 
 
 
-
                     <div class="popup_box"  style="padding-top: 20; padding-left: 10; padding-right: 10;">
-                        <h3 style="text-align: center;">합병보고의 공고</h3>
+                        <h2 style="text-align: center; text-decoration : underline;">신주발행 홈페이지 공고문</h2>
                         <div class="extra-space-m"></div>
+                    
                         <div class="popup_box_inner">
-                            <div class="popup_text">당사는 주식회사 주피터엔터테인먼트 및 주식회사 페르소나유니버스를 각각 흡수 합병 함에 있어 소정의 절차를 마쳤기에 상법 526조 제 1항 및 제 3항에 의거, 합병보고주주총회에 갈음하여 다음과 같이 공고합니다.</div>
-
-                            <div class="popup_text" style="text-align: center; margin:40px;"> - 다음 – </div>
-
-                            <div class="popup_text">1. 합병내용<br />
-                                &nbsp;&nbsp;가. 합병당사회사<br />
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 존속회사 : 주식회사 갤럭시코퍼레이션</li>
-                                </ul>
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 주피터엔터테인먼트</li>
-                                </ul>
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 페르소나유니버스</li>
-                                </ul>
-                                <br />
-                                &nbsp;&nbsp;나. 합병비율<br />
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0</li>
-                                </ul>
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0</li>
-                                </ul>
-                                <br />
-                                &nbsp;&nbsp;다. 증가주식수 및 자본금 : 해당사항 없음<br />
-                            </div>
-
-                            <div class="popup_text">2. 합병진행 결과<br />
-                                
+                    
+                            <div class="popup_text">
                                 <table style="text-align: left; margin: 5px;" align="center">
                                     <tbody>
-                                      <tr>
-                                        <td style="width:fill">2022년 6월 10일 </td>
-                                        <td>:합병이사회 결의</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 6월 10일</td>
-                                        <td>:합병계약서 체결</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 6월 29일</td>
-                                        <td>:채권자 이의제출 공고 및 최고통지</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 7월 29일</td>
-                                        <td>:채권자 이의제출기간 만료</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 8월 2일</td>
-                                        <td>:합병기일</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 8월 3일</td>
-                                        <td style="width:fill">:이사회결의<br />
-                                          (합병보고주주총회를 홈페이지공고로 갈음하기로 결의) </td>
-                                      </tr>
+                                    <tr>
+                                        <td style="width:fill">
+                                            <br />
+                                            <p style="text-align: center; font-weight: bold;">주식회사 갤럭시코퍼레이션 제3자배정 신주발행 공고<br /></p>
+                                            <br />
+                                            
+                                            <p style="font-weight: bold; display:inline">2022년 7월 25일</p><p style="display:inline"> 개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로 신주발행을 결의하였기에 공고합니다.</p><br />
+                                            <p style="text-align: center;"> -  다 음  - <br /></p>
+                                            <br />
+                    
+                                            1. 신주의 종류와 수 : 기명식 보통주식 269주<br />
+                                            2. 신주의 발행가액 : 1주당 7,427,600원<br />
+                                            3. 신주의 납입기일 : 2022년 8월 19일<br />
+                                            4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조 제2항에 따른 제3자 배정 방식<br />
+                                            5. 신주의 주금납입은행 : 주식회사 국민은행 증권타운지점<br />
+                    
+                                            <br />
+                                            <p style="text-align: center;">2022년 7월 27일<br /></p>
+                    
+                                            <p>
+                                                주식회사 갤럭시코퍼레이션<br />
+                                                서울특별시 영등포구 국제금융로 10, 12층 1218호 (여의도동, 투아이에프씨)<br />
+                                                대표이사 최용호<br />
+                                                <br />
+                                            </p>
+                                        </td>
+                                    </tr>
                                     </tbody>
                                 </table>
-
-                                <div style="text-align: center; margin:50px;">2022년 8월 3일</div>
-                                <div style="text-align: right; margin-top:15px;">서울특별시 영등포구 국제금융로 10, 12층 1218호</div>
-                                <div style="text-align: right; margin-top:15px;">주식회사 갤럭시코퍼레이션</div>
-                                <div style="text-align: right; margin-top:15px;">대표이사 최용호</div>
                             </div>
                         </div>
                     </div>
-
 
 
 
@@ -99,76 +68,52 @@
                     <div class="extra-space-m"></div>
 
 
+                    
+
                     <div class="popup_box"  style="padding-top: 20; padding-left: 10; padding-right: 10;">
-                        <h3 style="text-align: center;">합병보고의 공고</h3>
+                        <h2 style="text-align: center; text-decoration : underline;">신주발행 홈페이지 공고문</h2>
                         <div class="extra-space-m"></div>
+                    
                         <div class="popup_box_inner">
-                            <div class="popup_text">당사는 주식회사 주피터엔터테인먼트 및 주식회사 페르소나유니버스를 각각 흡수 합병 함에 있어 소정의 절차를 마쳤기에 상법 526조 제 1항 및 제 3항에 의거, 합병보고주주총회에 갈음하여 다음과 같이 공고합니다.</div>
-
-                            <div class="popup_text" style="text-align: center; margin:40px;"> - 다음 – </div>
-
-                            <div class="popup_text">1. 합병내용<br />
-                                &nbsp;&nbsp;가. 합병당사회사<br />
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 존속회사 : 주식회사 갤럭시코퍼레이션</li>
-                                </ul>
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 주피터엔터테인먼트</li>
-                                </ul>
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 해산회사 : 주식회사 페르소나유니버스</li>
-                                </ul>
-                                <br />
-                                &nbsp;&nbsp;나. 합병비율<br />
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0</li>
-                                </ul>
-                                <ul class="bulleted-list">
-                                    <li>&nbsp; &nbsp; * 주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0</li>
-                                </ul>
-                                <br />
-                                &nbsp;&nbsp;다. 증가주식수 및 자본금 : 해당사항 없음<br />
-                            </div>
-
-                            <div class="popup_text">2. 합병진행 결과<br />
-                                
+                    
+                            <div class="popup_text">
                                 <table style="text-align: left; margin: 5px;" align="center">
                                     <tbody>
-                                      <tr>
-                                        <td style="width:fill">2022년 6월 10일 </td>
-                                        <td>:합병이사회 결의</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 6월 10일</td>
-                                        <td>:합병계약서 체결</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 6월 29일</td>
-                                        <td>:채권자 이의제출 공고 및 최고통지</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 7월 29일</td>
-                                        <td>:채권자 이의제출기간 만료</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 8월 2일</td>
-                                        <td>:합병기일</td>
-                                      </tr>
-                                      <tr>
-                                        <td>2022년 8월 3일</td>
-                                        <td style="width:fill">:이사회결의<br />
-                                          (합병보고주주총회를 홈페이지공고로 갈음하기로 결의) </td>
-                                      </tr>
+                                    <tr>
+                                        <td style="width:fill">
+                                            <br />
+                                            <p style="text-align: center; font-weight: bold;">주식회사 갤럭시코퍼레이션 제3자배정 신주발행 공고<br /></p>
+                                            <br />
+                                            
+                                            <p style="font-weight: bold; display:inline">2022년 7월 25일</p><p style="display:inline"> 개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로 신주발행을 결의하였기에 공고합니다.</p><br />
+                                            <p style="text-align: center;"> -  다 음  - <br /></p>
+                                            <br />
+                    
+                                            1. 신주의 종류와 수 : 기명식 보통주식 269주<br />
+                                            2. 신주의 발행가액 : 1주당 7,427,600원<br />
+                                            3. 신주의 납입기일 : 2022년 8월 19일<br />
+                                            4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조 제2항에 따른 제3자 배정 방식<br />
+                                            5. 신주의 주금납입은행 : 주식회사 국민은행 증권타운지점<br />
+                    
+                                            <br />
+                                            <p style="text-align: center;">2022년 7월 27일<br /></p>
+                    
+                                            <p>
+                                                주식회사 갤럭시코퍼레이션<br />
+                                                서울특별시 영등포구 국제금융로 10, 12층 1218호 (여의도동, 투아이에프씨)<br />
+                                                대표이사 최용호<br />
+                                                <br />
+                                            </p>
+                                        </td>
+                                    </tr>
                                     </tbody>
                                 </table>
-
-                                <div style="text-align: center; margin:50px;">2022년 8월 3일</div>
-                                <div style="text-align: right; margin-top:15px;">서울특별시 영등포구 국제금융로 10, 12층 1218호</div>
-                                <div style="text-align: right; margin-top:15px;">주식회사 갤럭시코퍼레이션</div>
-                                <div style="text-align: right; margin-top:15px;">대표이사 최용호</div>
                             </div>
                         </div>
                     </div>
+
+
+
 
 
 
