--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -42,7 +42,7 @@
                         <br />
 
                         <p style="font-weight: bold; display: inline">
-                          2022년 7월 25일
+                          2022년 9월 20일
                         </p>
                         <p style="display: inline">
                           개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로
@@ -52,21 +52,22 @@
                         <p style="text-align: center">- 다 음 - <br /></p>
                         <br />
 
-                        1. 신주의 종류와 수 : 기명식 보통주식 269주<br />
+                        1. 신주의 종류와 수 : [제8종] 기명식
+                        전환우선주(의결권주) 269주<br />
                         2. 신주의 발행가액 : 1주당 7,427,600원<br />
-                        3. 신주의 납입기일 : 2022년 8월 26일<br />
+                        3. 신주의 납입기일 : 2022년 10월 14일<br />
                         4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조
                         제2항에 따른 제3자 배정 방식<br />
                         5. 신주의 주금납입은행 : 주식회사 국민은행
                         증권타운지점<br />
 
                         <br />
-                        <p style="text-align: center">2022년 8월 5일<br /></p>
+                        <p style="text-align: center">2022년 9월 22일<br /></p>
 
                         <p>
                           주식회사 갤럭시코퍼레이션<br />
-                          서울특별시 영등포구 국제금융로 10, 12층 1218호
-                          (여의도동, 투아이에프씨)<br />
+                          서울특별시 영등포구 국제금융로 10, 53층 5350호
+                          (여의도동, 쓰리아이에프씨)<br />
                           대표이사 최용호<br />
                           <br />
                         </p>
@@ -113,7 +114,7 @@
                         <br />
 
                         <p style="font-weight: bold; display: inline">
-                          2022년 7월 25일
+                          2022년 9월 20일
                         </p>
                         <p style="display: inline">
                           개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로
@@ -123,21 +124,22 @@
                         <p style="text-align: center">- 다 음 - <br /></p>
                         <br />
 
-                        1. 신주의 종류와 수 : 기명식 보통주식 269주<br />
+                        1. 신주의 종류와 수 : [제8종] 기명식
+                        전환우선주(의결권주) 269주<br />
                         2. 신주의 발행가액 : 1주당 7,427,600원<br />
-                        3. 신주의 납입기일 : 2022년 8월 26일<br />
+                        3. 신주의 납입기일 : 2022년 10월 14일<br />
                         4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조
                         제2항에 따른 제3자 배정 방식<br />
                         5. 신주의 주금납입은행 : 주식회사 국민은행
                         증권타운지점<br />
 
                         <br />
-                        <p style="text-align: center">2022년 8월 5일<br /></p>
+                        <p style="text-align: center">2022년 9월 22일<br /></p>
 
                         <p>
                           주식회사 갤럭시코퍼레이션<br />
-                          서울특별시 영등포구 국제금융로 10, 12층 1218호
-                          (여의도동, 투아이에프씨)<br />
+                          서울특별시 영등포구 국제금융로 10, 53층 5350호
+                          (여의도동, 쓰리아이에프씨)<br />
                           대표이사 최용호<br />
                           <br />
                         </p>
