--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -27,7 +27,7 @@
             <h2 style="text-align: center; text-decoration: underline">
               신주발행 홈페이지 공고문
             </h2>
-            <div class="extra-space-m"></div>
+            <div class="extra-space-l"></div>
 
             <div class="popup_box_inner">
               <div class="popup_text">
@@ -90,15 +90,15 @@
             class="ly_vote_close"
             ><span class="blind">팝업닫기</span></a
           >
-          <div class="extra-space-m"></div>
+          <div class="extra-space-l"></div>
 
           <div
             class="popup_box"
             style="padding-top: 20; padding-left: 10; padding-right: 10"
           >
-            <h2 style="text-align: center; text-decoration: underline">
+            <h3 style="text-align: center; text-decoration: underline">
               신주발행 홈페이지 공고문
-            </h2>
+            </h3>
             <div class="extra-space-m"></div>
 
             <div class="popup_box_inner">
