--- a/src/styles.css
+++ b/src/styles.css
@@ -142,9 +142,11 @@ dfn[title] {
   cursor: help;
 }
 
-table, tr, td{
+table,
+tr,
+td {
   border-collapse: collapse;
-  border:none;
+  border: none;
   border-width: 0px;
   border-spacing: 0;
 }
@@ -263,7 +265,7 @@ p {
   font: 14px/1.5em "Roboto";
 }
 
-.navbar-nav>li>a {
+.navbar-nav > li > a {
   font-family: "Noto Sans KR", sans-serif;
 }
 
@@ -288,7 +290,8 @@ section {
   width: 100%;
   height: 100%;
   z-index: 99999;
-  background: #fff url(assets/images/home/page-loader.gif) center center no-repeat;
+  background: #fff url(assets/images/home/page-loader.gif) center center
+    no-repeat;
 }
 
 .devider {
@@ -403,7 +406,7 @@ section {
 }
 
 /* Navbar links */
-.navbar-nav>li>a {
+.navbar-nav > li > a {
   padding: 24px 0;
   /* margin-left: 25px; */
   text-transform: uppercase;
@@ -422,9 +425,9 @@ section {
   left: auto !important;
 }
 
-.navbar-default .navbar-nav>.open>a,
-.navbar-default .navbar-nav>.open>a:hover,
-.navbar-default .navbar-nav>.open>a:focus {
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
   background-color: transparent;
 }
 
@@ -432,17 +435,17 @@ section {
   padding: 10px 0;
 }
 
-.dropdown-menu>li>a {
+.dropdown-menu > li > a {
   padding: 4px 20px;
   text-transform: uppercase;
 }
 
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus,
-.dropdown-menu>li>a.active,
-.dropdown-menu>.active>a,
-.dropdown-menu>.active>a:hover,
-.dropdown-menu>.active>a:focus {
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus,
+.dropdown-menu > li > a.active,
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
   text-decoration: none;
   background-color: transparent;
 }
@@ -472,14 +475,15 @@ section {
   font-size: 20px;
 }
 
-.navbar-default.navbar-fixed-top.navbar-shrink .container {}
+.navbar-default.navbar-fixed-top.navbar-shrink .container {
+}
 
 .navbar-fixed-top.navbar-shrink .container {
   padding-top: 0 !important;
   padding-bottom: 0 !important;
 }
 
-.navbar-default.navbar-fixed-top.navbar-shrink .navbar-nav>li>a {
+.navbar-default.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -499,7 +503,7 @@ section {
   padding-bottom: 30px;
 }
 
-.navbar-transparent .navbar-nav>li>a {
+.navbar-transparent .navbar-nav > li > a {
   color: #fff;
 }
 
@@ -695,7 +699,8 @@ a.rotate-box-2:hover {
 /* ===== End rotate boxes ===== */
 
 /* ===== Begin progress bar ===== */
-.skill-bar {}
+.skill-bar {
+}
 
 .progress {
   overflow: visible;
@@ -791,13 +796,17 @@ a.rotate-box-2:hover {
 /* ===== End testimonial ===== */
 
 /* ===== Begin Portfolio===== */
-.portfolio_area {}
+.portfolio_area {
+}
 
-.portfolio {}
+.portfolio {
+}
 
-.portfoloi_top {}
+.portfoloi_top {
+}
 
-.portfoloi_content_area {}
+.portfoloi_content_area {
+}
 
 .portfolio_menu {
   text-align: center;
@@ -825,7 +834,8 @@ a.rotate-box-2:hover {
   text-transform: uppercase;
 }
 
-.portfolio_content {}
+.portfolio_content {
+}
 
 .portfolio_single_content {
   position: relative;
@@ -864,7 +874,7 @@ a.rotate-box-2:hover {
   height: 100% !important;
 }
 
-.portfolio_single_content div+div {
+.portfolio_single_content div + div {
   background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
   bottom: -100%;
   color: #ffc000;
@@ -918,7 +928,8 @@ a.rotate-box-2:hover {
   text-transform: uppercase;
 }
 
-.portfolio_content {}
+.portfolio_content {
+}
 
 .portfolio_content {
   margin-top: 36px;
@@ -1087,7 +1098,8 @@ a.rotate-box-2:hover {
   background-color: black;
 }
 
-.counter-up .fact {}
+.counter-up .fact {
+}
 
 .counter-up .fact.last {
   border-right: none;
@@ -1229,7 +1241,8 @@ a.rotate-box-2:hover {
 /* ===== Begin panels ===== */
 .panel,
 .panel-heading,
-.panel-footer {}
+.panel-footer {
+}
 
 /* ===== End panels ===== */
 
@@ -1466,7 +1479,7 @@ ul.imp-links li a {
   margin: 20px 0;
 }
 
-#subscribe>input[type="text"] {
+#subscribe > input[type="text"] {
   border: 0 none;
   color: #99abb7;
   font-style: italic;
@@ -1476,7 +1489,7 @@ ul.imp-links li a {
   height: 30px;
 }
 
-#subscribe>button[type="submit"] {
+#subscribe > button[type="submit"] {
   background: none repeat scroll 0 0 #21c2f8;
   border: 0 none;
   color: #ffffff;
@@ -1746,28 +1759,28 @@ p.subtitle {
   background-color: black;
 }
 
-.navbar-default .navbar-nav>li>a {
+.navbar-default .navbar-nav > li > a {
   color: #a9a9a9;
 }
 
-.navbar-default .navbar-nav>li>a:hover,
-.navbar-default .navbar-nav>li>a:focus,
-.navbar-default .navbar-nav>li.active>a,
-.navbar-default .navbar-nav>.active>a {
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li.active > a,
+.navbar-default .navbar-nav > .active > a {
   color: #fff !important;
 }
 
-.navbar-default.navbar-fixed-top.navbar-shrink .navbar-nav>li>a {
+.navbar-default.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
   color: #a9a9a9;
 }
 
-.navbar-default.navbar-shrink .navbar-nav>li>a:hover,
-.navbar-default.navbar-shrink .navbar-nav>li>a:focus,
-.navbar-default.navbar-shrink .navbar-nav>li.active>a {
+.navbar-default.navbar-shrink .navbar-nav > li > a:hover,
+.navbar-default.navbar-shrink .navbar-nav > li > a:focus,
+.navbar-default.navbar-shrink .navbar-nav > li.active > a {
   color: #fff;
 }
 
-.navbar-default.navbar-shrink .navbar-nav>li.active>a {
+.navbar-default.navbar-shrink .navbar-nav > li.active > a {
   -webkit-box-shadow: inset 0 3px #fff !important;
   -moz-box-shadow: inset 0 3px #fff !important;
   box-shadow: inset 0 3px #fff !important;
@@ -1780,30 +1793,31 @@ p.subtitle {
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08);
 }
 
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus,
-.dropdown-menu>li>a.active,
-.dropdown-menu>.active>a,
-.dropdown-menu>.active>a:hover,
-.dropdown-menu>.active>a:focus {
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus,
+.dropdown-menu > li > a.active,
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
   color: #ffff;
 }
 
-.navbar-default .navbar-nav>.open>a,
-.navbar-default .navbar-nav>.open>a:hover,
-.navbar-default .navbar-nav>.open>a:focus {
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
   color: #fff;
 }
 
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus {
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
   background-color: transparent;
 }
 
-.navbar-default .navbar-nav>li>a:hover,
-.navbar-default .navbar-nav>li>a:focus,
-.navbar-default .navbar-nav>li.active>a {}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li.active > a {
+}
 
 /* Navbar inverse */
 .navbar-inverse {
@@ -1815,27 +1829,27 @@ p.subtitle {
   color: #ccc;
 }
 
-.navbar-inverse .navbar-nav>li>a {
+.navbar-inverse .navbar-nav > li > a {
   color: #ccc;
 }
 
-.navbar-inverse .navbar-nav>.active>a,
-.navbar-inverse .navbar-nav>.active>a:hover,
-.navbar-inverse .navbar-nav>.active>a:focus {
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
   background-color: transparent;
   color: #111;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover,
-.navbar-inverse .navbar-nav>li>a:focus,
-.navbar-inverse .navbar-nav>li.active>a {
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus,
+.navbar-inverse .navbar-nav > li.active > a {
   color: #111;
 }
 
 /* Navbar inverse dropdown */
-.navbar-inverse .navbar-nav>.open>a,
-.navbar-inverse .navbar-nav>.open>a:hover,
-.navbar-inverse .navbar-nav>.open>a:focus {
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
   color: #111;
 }
 
@@ -1845,12 +1859,12 @@ p.subtitle {
   border-top: 2px solid #111;
 }
 
-.navbar-inverse .dropdown-menu>li>a {
+.navbar-inverse .dropdown-menu > li > a {
   color: #ccc;
 }
 
-.navbar-inverse .dropdown-menu>li>a:hover,
-.navbar-inverse .dropdown-menu>li>a:focus {
+.navbar-inverse .dropdown-menu > li > a:hover,
+.navbar-inverse .dropdown-menu > li > a:focus {
   color: #111;
 }
 
@@ -1868,30 +1882,32 @@ p.subtitle {
   background-color: #111;
 }
 
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav>li>a {
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
   color: #ccc;
 }
 
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav>.active>a,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav>.active>a:hover,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav>.active>a:focus,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav>li>a:hover,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav>li>a:focus,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav>li.active>a {
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a:hover,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a:focus,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a:hover,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a:focus,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li.active > a {
   background-color: transparent;
   color: #111;
 }
 
 .navbar-fixed-top.navbar-shrink .navbar-brand,
 .navbar-fixed-top.navbar-shrink .navbar-brand:focus,
-body.boxed .body .navbar-inverse.navbar-transparent.navbar-shrink .navbar-brand {
+body.boxed
+  .body
+  .navbar-inverse.navbar-transparent.navbar-shrink
+  .navbar-brand {
   color: #ccc;
 }
 
 .navbar-fixed-top.navbar-shrink .navbar-brand:hover {
   color: #111;
 }
-
 
 .pc .popup {
   position: absolute;
@@ -1908,30 +1924,45 @@ body.boxed .body .navbar-inverse.navbar-transparent.navbar-shrink .navbar-brand 
   overflow: scroll;
 }
 
+.pc .popup2 {
+  position: absolute;
+  top: 200px;
+  left: 60%;
+  z-index: 100;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 658px;
+  height: 80%;
+  background-color: aliceblue;
+  margin-top: 3em;
+  padding: 2em 2em 2em 2em;
+  overflow: scroll;
+}
+
 .pc .popup_box {
   position: relative;
 }
 
-.pc .popup_box>h2 {
+.pc .popup_box > h2 {
   color: black;
   text-align: center;
   font-size: 35px;
 }
 
-.pc .popup_box>h3 {
+.pc .popup_box > h3 {
   color: black;
   text-align: center;
   font-size: 30px;
 }
 
-.pc .popup_box>h4 {
+.pc .popup_box > h4 {
   color: black;
   text-align: center;
   font-size: 27px;
 }
 
 /* pc Table  */
-.pc .popup_box>table,
+.pc .popup_box > table,
 tr,
 td,
 th {
@@ -1939,7 +1970,6 @@ th {
   text-align: left;
   padding: 2px 10px;
 }
-
 
 .pc .popup_box_inner {
   border-style: solid;
@@ -1965,7 +1995,6 @@ th {
   line-height: normal;
 }
 
-
 .pc .ly_vote_close {
   position: absolute;
   top: 20px;
@@ -1982,7 +2011,7 @@ th {
   width: 1px;
   height: 26px;
   background-color: black;
-  content: '';
+  content: "";
 }
 
 .pc .ly_vote_close::before {
@@ -2023,26 +2052,26 @@ th {
   position: relative;
 }
 
-.mobile .popup_box>h2 {
+.mobile .popup_box > h2 {
   color: black;
   text-align: center;
   font-size: 35px;
 }
 
-.mobile .popup_box>h3 {
+.mobile .popup_box > h3 {
   color: black;
   text-align: center;
   font-size: 30px;
 }
 
-.mobile .popup_box>h4 {
+.mobile .popup_box > h4 {
   color: black;
   text-align: center;
   font-size: 27px;
 }
 
 /* mobile Table  */
-.mobile .popup_box>table,
+.mobile .popup_box > table,
 tr,
 td,
 th {
@@ -2050,7 +2079,6 @@ th {
   text-align: left;
   padding: 2px 10px;
 }
-
 
 .mobile .popup_box_inner {
   border-style: solid;
@@ -2076,7 +2104,6 @@ th {
   line-height: normal;
 }
 
-
 .mobile .ly_vote_close {
   position: absolute;
   top: 20px;
@@ -2093,7 +2120,7 @@ th {
   width: 1px;
   height: 26px;
   background-color: black;
-  content: '';
+  content: "";
 }
 
 .mobile .ly_vote_close::before {
@@ -2142,13 +2169,13 @@ th {
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (min-width: 480px) {}
+@media only screen and (min-width: 480px) {
+}
 
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
-
   /* Make Navigation Toggle on Desktop Hover (use class: dropdown-hover) */
-  .dropdown-hover:hover>.dropdown-menu {
+  .dropdown-hover:hover > .dropdown-menu {
     display: block;
   }
 }
@@ -2173,7 +2200,6 @@ th {
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
-
   /* Text Carousel */
   #text-carousel-intro-section .caption h1 {
     font-size: 50px;
@@ -2201,7 +2227,6 @@ th {
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
-
   /* Team */
   .team-item .team-triangle {
     width: 120px;
@@ -2288,7 +2313,7 @@ th {
     align-items: center;
   }
 
-  .navbar-nav>li>a {
+  .navbar-nav > li > a {
     padding: 10px 0 !important;
     color: #fff;
     width: 150px;
@@ -2297,7 +2322,6 @@ th {
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 767px) {
-
   h1,
   h2,
   h3,
@@ -2351,11 +2375,11 @@ th {
     margin: 0;
   }
 
-  .container .page-header>img {
+  .container .page-header > img {
     width: 100%;
   }
 
-  .devide_sub>img {
+  .devide_sub > img {
     width: 50%;
   }
 
@@ -2401,26 +2425,26 @@ th {
     background-color: #111;
   }
 
-  .navbar-nav>li>a {
+  .navbar-nav > li > a {
     padding: 10px 0 !important;
     color: #fff;
   }
 
-  .navbar-nav .open .dropdown-menu>li>a {
+  .navbar-nav .open .dropdown-menu > li > a {
     padding: 10px 10px 10px 45px !important;
   }
 
-  .navbar-default .navbar-nav>li>a,
-  .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+  .navbar-default .navbar-nav > li > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #222;
   }
 
-  .navbar-inverse .navbar-nav>li>a,
-  .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+  .navbar-inverse .navbar-nav > li > a,
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #ccc;
   }
 
-  .navbar-default.navbar-shrink .navbar-nav>li.active>a {
+  .navbar-default.navbar-shrink .navbar-nav > li.active > a {
     -webkit-box-shadow: none !important;
     -moz-box-shadow: none !important;
     box-shadow: none !important;
@@ -2507,13 +2531,13 @@ th {
     border-color: #fff !important;
   }
 
-  .navbar-default.navbar-shrink .navbar-nav>li.active>a {
+  .navbar-default.navbar-shrink .navbar-nav > li.active > a {
     box-shadow: none !important;
   }
 
-  .navbar-nav>li>a:hover,
-  .navbar-nav>li>a:focus,
-  .navbar-nav>li.active>a {
+  .navbar-nav > li > a:hover,
+  .navbar-nav > li > a:focus,
+  .navbar-nav > li.active > a {
     color: #111;
   }
 
@@ -2533,13 +2557,13 @@ th {
     text-align: center;
   }
 
-  .navbar-nav>li>a {
+  .navbar-nav > li > a {
     padding: 10px 0 !important;
     color: #fff;
     width: 100%;
   }
 
-  .navbar-default.navbar-shrink .navbar-nav>li.active>a {
+  .navbar-default.navbar-shrink .navbar-nav > li.active > a {
     box-shadow: none !important;
   }
 
@@ -2564,13 +2588,12 @@ th {
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
-
   /* Team */
   #team-section .col-md-2 {
     width: 100%;
   }
 
-  .mobile .popup_box>h3 {
+  .mobile .popup_box > h3 {
     color: black;
     text-align: center;
     font-size: 20px;
@@ -2634,19 +2657,19 @@ th {
     font-size: 11px;
   }
 
-  .mobile .popup_box>h2 {
+  .mobile .popup_box > h2 {
     color: black;
     text-align: center;
     font-size: 19px;
   }
 
-  .mobile .popup_box>h3 {
+  .mobile .popup_box > h3 {
     color: black;
     text-align: center;
     font-size: 16px;
   }
 
-  .mobile .popup_box>h4 {
+  .mobile .popup_box > h4 {
     color: black;
     text-align: center;
     font-size: 14px;
@@ -2775,11 +2798,11 @@ a:focus {
   background-color: black;
 }
 
-#subscribe>button[type="submit"] {
+#subscribe > button[type="submit"] {
   background: none repeat scroll 0 0 #676d75;
 }
 
-#subscribe>button[type="submit"]:hover {
+#subscribe > button[type="submit"]:hover {
   background: none repeat scroll 0 0 #111;
 }
 
