--- a/src/app/pages/pc/home/about/galaxy-about.component_notice_2popups.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component_notice_2popups.html
@@ -215,7 +215,7 @@
             class="ly_vote_close"
             ><span class="blind">팝업닫기</span></a
           >
-          <div class="extra-space-l"></div>
+          <div class="extra-space-m"></div>
 
           <div
             class="popup_box"
@@ -400,6 +400,151 @@
                 <div style="text-align: center; margin-top: 15px">
                   주식회사 갤럭시코퍼레이션 대표이사 최용호(직인생략)
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="popup_container" #popupContainer2>
+      <div class="pc">
+        <div class="popup">
+          <a
+            (click)="closePopup2()"
+            style="cursor: pointer"
+            type="button"
+            class="ly_vote_close"
+            ><span class="blind">팝업닫기</span></a
+          >
+          <div class="extra-space-m"></div>
+
+          <div
+            class="popup_box"
+            style="padding-top: 20; padding-left: 10; padding-right: 10"
+          >
+            <h2 style="text-align: center; text-decoration: underline">
+              신주발행 홈페이지 공고문
+            </h2>
+            <div class="extra-space-l"></div>
+
+            <div class="popup_box_inner">
+              <div class="popup_text">
+                <table style="text-align: left; margin: 5px" align="center">
+                  <tbody>
+                    <tr>
+                      <td style="width: fill">
+                        <br />
+                        <p style="text-align: center; font-weight: bold">
+                          주식회사 갤럭시코퍼레이션 제3자배정 신주발행 공고<br />
+                        </p>
+                        <br />
+
+                        <p style="font-weight: bold; display: inline">
+                          2022년 9월 20일
+                        </p>
+                        <p style="display: inline">
+                          개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로
+                          신주발행을 결의하였기에 공고합니다.
+                        </p>
+                        <br />
+                        <p style="text-align: center">- 다 음 - <br /></p>
+                        <br />
+
+                        1. 신주의 종류와 수 : [제8종] 기명식
+                        전환우선주(의결권주) 269주<br />
+                        2. 신주의 발행가액 : 1주당 7,427,600원<br />
+                        3. 신주의 납입기일 : 2022년 10월 14일<br />
+                        4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조
+                        제2항에 따른 제3자 배정 방식<br />
+                        5. 신주의 주금납입은행 : 주식회사 국민은행
+                        증권타운지점<br />
+
+                        <br />
+                        <p style="text-align: center">2022년 9월 22일<br /></p>
+
+                        <p>
+                          주식회사 갤럭시코퍼레이션<br />
+                          서울특별시 영등포구 국제금융로 10, 53층 5350호
+                          (여의도동, 쓰리아이에프씨)<br />
+                          대표이사 최용호<br />
+                          <br />
+                        </p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="mobile">
+        <div class="popup" #popup>
+          <a
+            (click)="closePopup2()"
+            style="cursor: pointer"
+            type="button"
+            class="ly_vote_close"
+            ><span class="blind">팝업닫기</span></a
+          >
+          <div class="extra-space-l"></div>
+
+          <div
+            class="popup_box"
+            style="padding-top: 20; padding-left: 10; padding-right: 10"
+          >
+            <h3 style="text-align: center; text-decoration: underline">
+              신주발행 홈페이지 공고문
+            </h3>
+            <div class="extra-space-m"></div>
+
+            <div class="popup_box_inner">
+              <div class="popup_text">
+                <table style="text-align: left; margin: 5px" align="center">
+                  <tbody>
+                    <tr>
+                      <td style="width: fill">
+                        <br />
+                        <p style="text-align: center; font-weight: bold">
+                          주식회사 갤럭시코퍼레이션 제3자배정 신주발행 공고<br />
+                        </p>
+                        <br />
+
+                        <p style="font-weight: bold; display: inline">
+                          2022년 9월 20일
+                        </p>
+                        <p style="display: inline">
+                          개최한 당사 이사회에서 다음과 같이 제3자 배정방법으로
+                          신주발행을 결의하였기에 공고합니다.
+                        </p>
+                        <br />
+                        <p style="text-align: center">- 다 음 - <br /></p>
+                        <br />
+
+                        1. 신주의 종류와 수 : [제8종] 기명식
+                        전환우선주(의결권주) 269주<br />
+                        2. 신주의 발행가액 : 1주당 7,427,600원<br />
+                        3. 신주의 납입기일 : 2022년 10월 14일<br />
+                        4. 신주의 인수방법 : 상법 제418조 및 당사 정관 제9조
+                        제2항에 따른 제3자 배정 방식<br />
+                        5. 신주의 주금납입은행 : 주식회사 국민은행
+                        증권타운지점<br />
+
+                        <br />
+                        <p style="text-align: center">2022년 9월 22일<br /></p>
+
+                        <p>
+                          주식회사 갤럭시코퍼레이션<br />
+                          서울특별시 영등포구 국제금융로 10, 53층 5350호
+                          (여의도동, 쓰리아이에프씨)<br />
+                          대표이사 최용호<br />
+                          <br />
+                        </p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
